# polaris-trustomer-api

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  dhos-trustomer-api.tml  run_integration_tests.sh
.infra/: install-upgrade-az-uk-dev.sh  install-upgrade-az-uk-nonprod.sh  install-upgrade-az-uk-prod.sh
.infra/helm-chart/dhos-trustomer-api/: Chart.yaml  values-az-uk-dev-upstream-api001.yaml  values-az-uk-nonprod-upstream-api001.yaml  values.yaml  (+1 more)
dhos_trustomer_api/: __main__.py  app.py  config.py
dhos_trustomer_api/blueprint_api/: __init__.py  controller.py  schema.py  trustomer.py
dhos_trustomer_api/helper/: cli.py
dhos_trustomer_api/models/: api_spec.py
dhos_trustomer_api/openapi/: openapi.yaml
integration-tests/: Dockerfile  Makefile  README.md  docker-compose.yml  reporting.py  requirements.txt
integration-tests/clients/: trustomer_client.py
integration-tests/features/: barcode.feature  escalation.feature  trustomer.feature
integration-tests/resources/: barcode_OUH.txt  barcode_SWFT.txt  barcode_decoded_OUH.json  barcode_decoded_SWFT.json  barcode_unsupported.txt
integration-tests/steps/: barcode_steps.py  escalation_policy_steps.py  trustomer_steps.py
tests/: conftest.py  test_api.py  test_controller.py  test_openapi.py  test_trustomer.py
trustomer-config-dummy/: README.md
trustomer-config-dummy/DEV/: content.json
trustomer-config-dummy/STAGING/: content.json
trustomer-config-dummy/USDEV/: content.json
(+5 files in other folders)
